# ai-course

./: .gitignore  pyproject.toml
01_tokenization/: main.py
02_vector/: docker-compose.yml
02_vector/01_cloud/: cloud_cluster.py
02_vector/02_collection/: qdrant_collection.py
02_vector/03_crud/: crud.py
02_vector/04_store/: store.py
02_vector/05_filtering/: payload_filtering.py
02_vector/06_role_based_access/: role_based_filter.py
02_vector/07_similarity/: similarity.py
03_rag/01_chatbot/: hr_chatbot.py
03_rag/02_docparsing/: docling_demo.py
04_langchain/01_langchain_intro/: intro.py
04_langchain/02_rag/: langchain_rag.py
05_agentic/01_tool/: tool.py
