[project]
name = "ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.81.0",
    "docling-hierarchical-pdf>=0.1.5",
    "dotenv>=0.9.9",
    "groq>=1.1.1",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
]
