[project]
name = "ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.81.0",
    "docling-core>=2.70.2",
    "docling-hierarchical-pdf>=0.1.5",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "groq>=0.4.1,<1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "wikipedia>=1.4.0",
    "yfinance>=1.2.0",
]
